# codex-desktop-history-repair

./: .gitignore  README.md  pyproject.toml
docs/: PRD-历史对话修复项目.md  技术方案-历史对话修复项目.md  桌面端外部接入与升级策略.md  验收标准-历史对话修复项目.md
scripts/: README.md  install_codex_app_patch_launch_agent.sh  patch_codex_app_extended_history.js  restore_codex_app_from_backup.js
src/history_repair/: __init__.py  autosync_agent.py  cli.py  db.py  desktop_adapter.py  export_import.py  host.py  models.py  planner.py  provider_sync.py  providers.py  repositories.py  service.py  streaming.py  summary.py  utils.py
tests/: test_cli.py  test_desktop_adapter.py  test_host_integration.py  test_patch_codex_app_extended_history.js  test_phase1.py  test_phase2_continue_after_import.py  test_phase2_export_import.py  test_provider_responses_api.py  test_provider_sync.py
