[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "codex-desktop-history-repair"
version = "0.1.0"
description = "Local history repair engine for Codex Desktop conversations"
requires-python = ">=3.11"

[project.scripts]
history-repair = "history_repair.cli:main"

[tool.setuptools.packages.find]
where = ["src"]
